feat: add file-storage backend with seaweed
