# packages/openapi-spec/src/openapi.yaml
@@ -69,11 +69,11 @@ paths:
                     owner:
                       id: 123e4567-e89b-12d3-a456-426614174000
                       name: John Doe
-                      image: 'https://kappa.lol/BVcN2I'
+                      image: https://kappa.lol/BVcN2I
                       username: johndoe
                       createdAt: '2022-01-01T00:00:00Z'
                       updatedAt: '2022-01-01T00:00:00Z'
-                    image: 'https://kappa.lol/ClQMZ'
+                    image: https://kappa.lol/ClQMZ
                     allocatedStorage: 1073741824
                     createdAt: '2022-01-01T00:00:00Z'
                     updatedAt: '2022-01-01T00:00:00Z'
@@ -139,10 +139,10 @@ paths:
                     id: 123e4567-e89b-12d3-a456-426614174000
                     name: John Doe
                     username: johndoe
-                    image: 'https://kappa.lol/BVcN2I'
+                    image: https://kappa.lol/BVcN2I
                     createdAt: '2022-01-01T00:00:00Z'
                     updatedAt: '2022-01-01T00:00:00Z'
-                  image: 'https://kappa.lol/ClQMZ'
+                  image: https://kappa.lol/ClQMZ
                   allocatedStorage: 1073741824
                   createdAt: '2022-01-01T00:00:00Z'
                   updatedAt: '2022-01-01T00:00:00Z'
@@ -155,9 +155,9 @@ paths:
               reason: Invalid or missing parameters
               errors:
                 name:
-                  - 'name is required'
+                  - name is required
                 allocatedStorage:
-                  - 'allocatedStorage is required'
+                  - allocatedStorage is required
         '401':
           $ref: '#/components/responses/unauthorized'
         '403':
@@ -211,10 +211,10 @@ paths:
                     id: 123e4567-e89b-12d3-a456-426614174000
                     name: John Doe
                     username: johndoe
-                    image: 'https://kappa.lol/BVcN2I'
+                    image: https://kappa.lol/BVcN2I
                     createdAt: '2022-01-01T00:00:00Z'
                     updatedAt: '2022-01-01T00:00:00Z'
-                  image: 'https://kappa.lol/ClQMZ'
+                  image: https://kappa.lol/ClQMZ
                   allocatedStorage: 1073741824
                   createdAt: '2022-01-01T00:00:00Z'
                   updatedAt: '2022-01-01T00:00:00Z'
@@ -227,7 +227,7 @@ paths:
               reason: Invalid or missing parameters
               errors:
                 id:
-                  - 'id is required'
+                  - id is required
         '401':
           $ref: '#/components/responses/unauthorized'
         '403':
@@ -291,10 +291,10 @@ paths:
                     id: 123e4567-e89b-12d3-a456-426614174000
                     name: John Doe
                     username: johndoe
-                    image: 'https://kappa.lol/BVcN2I'
+                    image: https://kappa.lol/BVcN2I
                     createdAt: '2022-01-01T00:00:00Z'
                     updatedAt: '2022-01-01T00:00:00Z'
-                  image: 'https://kappa.lol/ClQMZ'
+                  image: https://kappa.lol/ClQMZ
                   allocatedStorage: 1073741824
                   createdAt: '2022-01-01T00:00:00Z'
                   updatedAt: '2022-01-01T00:00:00Z'
@@ -307,7 +307,7 @@ paths:
               reason: Invalid or missing parameters
               errors:
                 id:
-                  - 'id is required'
+                  - id is required
         '401':
           $ref: '#/components/responses/unauthorized'
         '403':
@@ -357,7 +357,7 @@ paths:
               reason: Invalid or missing parameters
               errors:
                 id:
-                  - 'id is required'
+                  - id is required
         '401':
           $ref: '#/components/responses/unauthorized'
         '403':
@@ -366,72 +366,205 @@ paths:
           $ref: '#/components/responses/not_found'
         '500':
           $ref: '#/components/responses/internal_server_error'
+  /clouds/{id}/files:
+    get:
+      summary: View files in a Cloud
+      description: |
+        Returns an array of metadata for the contained directories and files in the root of the Cloud. See also: [`GET /clouds/{id}/files/*path`](#tag/clouds/GET/clouds/{id}/files/*path)
+      operationId: getCloudFiles
+      tags:
+        - Clouds
+      parameters:
+        - name: id
+          in: path
+          required: true
+          schema:
+            $ref: '#/components/schemas/uuid'
+      responses:
+        '200':
+          description: OK
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  status:
+                    type: string
+                    enum:
+                      - success
+                  data:
+                    type: array
+                    items:
+                      oneOf:
+                        - $ref: '#/components/schemas/file'
+                        - $ref: '#/components/schemas/directory'
+                required:
+                  - status
+                  - data
+        '400':
+          $ref: '#/components/responses/bad_request'
+        '401':
+          $ref: '#/components/responses/unauthorized'
+        '403':
+          $ref: '#/components/responses/forbidden'
+        '500':
+          $ref: '#/components/responses/internal_server_error'
+    put:
+      summary: Upload files to a Cloud
+      description: |
+        Upload one or multiple files to the root of a Cloud. For each of the uploaded items, creates a new file on the path if it doesn't exist, otherwise updates the existing file.  See also: [`POST /clouds/{id}/files/*path`](#tag/clouds/PUT/clouds/{id}/files/*path)
+      operationId: uploadFileToCloud
+      tags:
+        - Clouds
+      parameters:
+        - name: id
+          in: path
+          required: true
+          schema:
+            $ref: '#/components/schemas/uuid'
+      requestBody:
+        required: true
+        content:
+          multipart/form-data:
+            schema:
+              type: object
+              properties:
+                file:
+                  $ref: '#/components/schemas/fileUpload'
+              required:
+                - files
+      responses:
+        '201':
+          description: Created
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  status:
+                    type: string
+                    enum:
+                      - success
+                required:
+                  - status
+        '400':
+          $ref: '#/components/responses/bad_request'
+        '401':
+          $ref: '#/components/responses/unauthorized'
+        '403':
+          $ref: '#/components/responses/forbidden'
+        '500':
+          $ref: '#/components/responses/internal_server_error'
+  /clouds/{id}/files/*path:
+    get:
+      summary: View contents on path in a Cloud
+      description: Returns an array of metadata for the contained directories and files if `path` refers to a directory in the Cloud. Returns the raw file content (e.g. Markdown text) if `path` refers to a file in the Cloud.
+      operationId: getCloudFilesOnPath
+      tags:
+        - Clouds
+      parameters:
+        - name: id
+          in: path
+          required: true
+          schema:
+            $ref: '#/components/schemas/uuid'
+        - name: path
+          in: path
+          required: true
+          schema:
+            type: string
+          description: |
+            The path to the file or directory in the Cloud.  This parameter captures the entire subpath (e.g. /folderA/folderB/).
+      responses:
+        '200':
+          description: OK
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  status:
+                    type: string
+                    enum:
+                      - success
+                  data:
+                    type: array
+                    items:
+                      oneOf:
+                        - $ref: '#/components/schemas/file'
+                        - $ref: '#/components/schemas/directory'
+                required:
+                  - status
+                  - data
+            text/plain:
+              schema:
+                $ref: '#/components/schemas/fileContents'
+        '400':
+          $ref: '#/components/responses/bad_request'
+        '401':
+          $ref: '#/components/responses/unauthorized'
+        '403':
+          $ref: '#/components/responses/forbidden'
+        '404':
+          $ref: '#/components/responses/not_found'
+        '500':
+          $ref: '#/components/responses/internal_server_error'
+    put:
+      summary: Upload files to a Cloud subdirectory
+      description: |
+        Upload one or multiple files to a specific path in the Cloud. For each of the uploaded items, creates a new file on the path if it doesn't exist, otherwise updates the existing file. The upload path of each uploaded file is relative to the destination specified by the `path` parameter.
+      operationId: uploadFileToCloudOnPath
+      tags:
+        - Clouds
+      parameters:
+        - name: id
+          in: path
+          required: true
+          schema:
+            $ref: '#/components/schemas/uuid'
+        - name: path
+          in: path
+          required: true
+          schema:
+            type: string
+          description: |
+            The root destination path in the Cloud for the uploaded files.  This parameter captures the entire subpath (e.g. /folderA/folderB/).
+      requestBody:
+        required: true
+        content:
+          multipart/form-data:
+            schema:
+              type: object
+              properties:
+                files:
+                  type: array
+                  items:
+                    $ref: '#/components/schemas/fileUpload'
+              required:
+                - files
+      responses:
+        '201':
+          description: Created
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  status:
+                    type: string
+                    enum:
+                      - success
+                required:
+                  - status
+        '400':
+          $ref: '#/components/responses/bad_request'
+        '401':
+          $ref: '#/components/responses/unauthorized'
+        '403':
+          $ref: '#/components/responses/forbidden'
+        '500':
+          $ref: '#/components/responses/internal_server_error'
 components:
-  schemas:
-    uuid:
-      type: string
-      format: uuid
-    image:
-      oneOf:
-        - type: string
-        - type: 'null'
-      description: The path to where the image can be retrieved
-    createdAt:
-      type: string
-      format: date-time
-      readOnly: true
-    updatedAt:
-      type: string
-      format: date-time
-      readOnly: true
-    user:
-      type: object
-      properties:
-        id:
-          type: string
-        name:
-          type: string
-        username:
-          type: string
-        image:
-          $ref: '#/components/schemas/image'
-        createdAt:
-          $ref: '#/components/schemas/createdAt'
-        updatedAt:
-          $ref: '#/components/schemas/updatedAt'
-      required:
-        - id
-        - name
-        - username
-        - image
-        - createdAt
-        - updatedAt
-    cloud:
-      type: object
-      properties:
-        id:
-          $ref: '#/components/schemas/uuid'
-          readOnly: true
-          description: The id of the cloud
-        name:
-          type: string
-          description: The name of the cloud
-        owner:
-          $ref: '#/components/schemas/user'
-          readOnly: true
-          description: The user that owns the cloud
-        image:
-          $ref: '#/components/schemas/image'
-        allocatedStorage:
-          type: number
-          minimum: 1
-          description: The amount of storage (in bytes) allocated for the cloud
-        createdAt:
-          $ref: '#/components/schemas/createdAt'
-          description: The `date-time` the cloud was created
-        updatedAt:
-          $ref: '#/components/schemas/updatedAt'
-          description: The `date-time` the cloud was last updated
   responses:
     bad_request:
       description: Bad Request
@@ -583,3 +716,106 @@ components:
             data:
               message: Requested resource not found
               reason: The requested resource does not exist
+  schemas:
+    uuid:
+      type: string
+      format: uuid
+    image:
+      oneOf:
+        - type: string
+        - type: 'null'
+      description: The path to where the image can be retrieved
+    createdAt:
+      type: string
+      format: date-time
+      readOnly: true
+    updatedAt:
+      type: string
+      format: date-time
+      readOnly: true
+    user:
+      type: object
+      properties:
+        id:
+          type: string
+        name:
+          type: string
+        username:
+          type: string
+        image:
+          $ref: '#/components/schemas/image'
+        createdAt:
+          $ref: '#/components/schemas/createdAt'
+        updatedAt:
+          $ref: '#/components/schemas/updatedAt'
+      required:
+        - id
+        - name
+        - username
+        - image
+        - createdAt
+        - updatedAt
+    cloud:
+      type: object
+      properties:
+        id:
+          $ref: '#/components/schemas/uuid'
+          readOnly: true
+          description: The id of the cloud
+        name:
+          type: string
+          description: The name of the cloud
+        owner:
+          $ref: '#/components/schemas/user'
+          readOnly: true
+          description: The user that owns the cloud
+        image:
+          $ref: '#/components/schemas/image'
+        allocatedStorage:
+          type: number
+          minimum: 1
+          description: The amount of storage (in bytes) allocated for the cloud
+        createdAt:
+          $ref: '#/components/schemas/createdAt'
+          description: The `date-time` the cloud was created
+        updatedAt:
+          $ref: '#/components/schemas/updatedAt'
+          description: The `date-time` the cloud was last updated
+    file:
+      type: object
+      properties:
+        name:
+          type: string
+        path:
+          type: string
+        type:
+          type: string
+          enum:
+            - file
+          readOnly: true
+        createdAt:
+          $ref: '#/components/schemas/createdAt'
+        updatedAt:
+          $ref: '#/components/schemas/updatedAt'
+    directory:
+      type: object
+      properties:
+        name:
+          type: string
+        path:
+          type: string
+        type:
+          type: string
+          enum:
+            - directory
+          readOnly: true
+        createdAt:
+          $ref: '#/components/schemas/createdAt'
+        updatedAt:
+          $ref: '#/components/schemas/updatedAt'
+    fileUpload:
+      type: string
+      format: binary
+    fileContents:
+      type: string
+      description: Raw file contents in plain text format
